# wagtail-modeltranslation

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  Makefile  PKG-INFO  Pipfile  README.md  README.rst  _WHY_DID_WE_FORK_THIS_PACKAGE.txt  get-modeltranslation-version.py  get-wagtail-version.py  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: AUTHORS.rst  Advanced Settings.rst  CHANGELOG.rst  Configuration.rst  Installation.rst  Introduction.rst  Multilingual Manager.rst  Registering Models.rst  Usage.rst  advanced settings.rst  caveats.rst  conf.py  extending.rst  index.rst  management commands.rst  recommended reading.rst  template tags.rst  upgrade considerations.rst
docs/releases/: 0.11.0.rst  0.12.0.rst  0.13.0.rst  0.14.0.rst  0.15.0.rst  0.6.0.rst  index.rst
wagtail_modeltranslation/: __init__.py  apps.py  contextlib.py  decorators.py  fields.py  forms.py  manager.py  models.py  patch_wagtailadmin.py  patch_wagtailadmin_actions.py  patch_wagtailadmin_forms.py  patch_wagtailadmin_views.py  patch_wagtailcore.py  settings.py  signal_handlers.py  translation.py  translator.py  urls.py  utils.py  wagtail_hooks.py
wagtail_modeltranslation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_modeltranslation/makemigrations/: __init__.py  apps.py
wagtail_modeltranslation/makemigrations/management/commands/: makemigrations.py  makemigrations_original.py
wagtail_modeltranslation/management/commands/: loaddata.py  makemigrations_translation.py  migrate_translation.py  set_translation_url_paths.py  sync_page_translation_fields.py  sync_translation_fields.py  update_translation_fields.py
wagtail_modeltranslation/migrate/: __init__.py  apps.py
wagtail_modeltranslation/migrate/management/commands/: migrate.py  migrate_original.py
wagtail_modeltranslation/static/modeltranslation/css/: page_editor_modeltranslation.css
wagtail_modeltranslation/static/modeltranslation/js/: copy_stream_fields.js
wagtail_modeltranslation/static/wagtail_modeltranslation/css/: admin_patch.css  language_toggles.css  page_editor_modeltranslation.css
wagtail_modeltranslation/static/wagtail_modeltranslation/js/: copy_stream_fields.js  language_toggles.js  translated_slugs.js  version_compare.js  wagtail_translated_slugs.js
wagtail_modeltranslation/templates/: modeltranslation_copy.html
wagtail_modeltranslation/templates/wagtailadmin/pages/: copy.html
wagtail_modeltranslation/templatetags/: modeltranslation.py  wagtail_modeltranslation.py
wagtail_modeltranslation/tests/: __init__.py  apps.py  models.py  project_translation.py  settings.py  test_settings.py  tests.py  translation.py  urls.py  util.py
wagtail_modeltranslation/tests/migrations/: 0001_initial.py  0002_titlefieldpanelpagetest.py
wagtail_modeltranslation/tests/test_app/: models.py  translation.py
